<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>@spring-boot.version@</version>
    <relativePath/>
  </parent>

  <groupId>archetype.it</groupId>
  <artifactId>basic-project</artifactId>
  <version>0.1-SNAPSHOT</version>

  <properties>
    <argLine/>
    <java.version>17</java.version>

    <h2.version>@h2.version@</h2.version>
    <jooq.version>@jooq.version@</jooq.version>
    <liquibase.version>@liquibase.version@</liquibase.version>
    <markitect-liquibase.version>@project.version@</markitect-liquibase.version>
    <snakeyaml.version>@snakeyaml.version@</snakeyaml.version>
    <spring-boot.version>@spring-boot.version@</spring-boot.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>dev.markitect.liquibase</groupId>
        <artifactId>markitect-liquibase-bom</artifactId>
        <version>${markitect-liquibase.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter</artifactId>
        <version>${spring-boot.version}</version>
        <exclusions>
          <exclusion>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-logging</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <dependencies>
    <dependency>
      <groupId>com.h2database</groupId>
      <artifactId>h2</artifactId>
    </dependency>
    <dependency>
      <groupId>dev.markitect.liquibase</groupId>
      <artifactId>markitect-liquibase-spring-boot-starter</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-jooq</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-log4j2</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <repositories>
    <repository>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
      <id>spring-milestones</id>
      <name>Spring Milestones</name>
      <url>https://repo.spring.io/milestone</url>
    </repository>
    <repository>
      <releases>
        <enabled>false</enabled>
      </releases>
      <id>spring-snapshots</id>
      <name>Spring Snapshots</name>
      <url>https://repo.spring.io/snapshot</url>
    </repository>
  </repositories>
  <pluginRepositories>
    <pluginRepository>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
      <id>spring-milestones</id>
      <name>Spring Milestones</name>
      <url>https://repo.spring.io/milestone</url>
    </pluginRepository>
    <pluginRepository>
      <releases>
        <enabled>false</enabled>
      </releases>
      <id>spring-snapshots</id>
      <name>Spring Snapshots</name>
      <url>https://repo.spring.io/snapshot</url>
    </pluginRepository>
  </pluginRepositories>

  <build>
    <plugins>
      <plugin>
        <groupId>org.liquibase</groupId>
        <artifactId>liquibase-maven-plugin</artifactId>
        <version>${liquibase.version}</version>
        <configuration>
          <driver>org.h2.Driver</driver>
          <url>jdbc:h2:${project.build.directory}/jooq-liquibase/h2</url>
          <username>sa</username>
          <password/>
          <includeArtifact>false</includeArtifact>
          <includeTestOutputDirectory>false</includeTestOutputDirectory>
          <searchPath>${project.basedir}/src/main/resources</searchPath>
          <changeLogFile>db/changelog/db.changelog-master.yaml</changeLogFile>
        </configuration>
        <executions>
          <execution>
            <id>jooq-liquibase</id>
            <goals>
              <goal>update</goal>
            </goals>
            <phase>generate-sources</phase>
          </execution>
        </executions>
        <dependencies>
          <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <version>${h2.version}</version>
          </dependency>
          <dependency>
            <groupId>dev.markitect.liquibase</groupId>
            <artifactId>markitect-liquibase-core</artifactId>
            <version>${markitect-liquibase.version}</version>
          </dependency>
        </dependencies>
      </plugin>
      <plugin>
        <groupId>org.jooq</groupId>
        <artifactId>jooq-codegen-maven</artifactId>
        <version>${jooq.version}</version>
        <configuration>
          <jdbc>
            <driver>org.h2.Driver</driver>
            <url>jdbc:h2:${project.build.directory}/jooq-liquibase/h2</url>
            <user>sa</user>
            <password/>
          </jdbc>
          <generator>
            <database>
              <name>org.jooq.meta.h2.H2Database</name>
              <excludes>DATABASECHANGELOG.*</excludes>
              <inputSchema>PUBLIC</inputSchema>
              <outputSchemaToDefault>true</outputSchemaToDefault>
            </database>
            <target>
              <packageName>it.pkg.jooq</packageName>
              <directory>target/generated-sources/jooq</directory>
            </target>
          </generator>
        </configuration>
        <executions>
          <execution>
            <id>jooq-codegen</id>
            <goals>
              <goal>generate</goal>
            </goals>
            <phase>generate-sources</phase>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>@{argLine}
            -XX:+EnableDynamicAgentLoading</argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
      </plugin>
    </plugins>
  </build>
</project>
